--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="grey_text">#4A4A4A</color>
+    <color name="red">#EE0202</color>
+    <color name="white">#FFFFFF</color>
+    <color name="blue">#162FD8</color>
 </resources>
